# Tutor-RAG-BACKEND

./: .gitignore  README.md  manage.py  pyproject.toml
TutorRAG/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
chatshell/: apps.py  enums.py  models.py
chatshell/api/: serializers.py  urls.py  views.py
chatshell/embeddings/: create_database.py  embedder.py  vector_store.py
chatshell/migrations/: 0001_initial.py
chatshell/templates/: chat.html
content/: forms.py  models.py  serializers.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_alter_content_file.py
content/templates/: upload-file.html
